AXSelected attribute on RadioButton should not be settable. https://bugs.webkit.org/show_bug.cgi?id=193371

Patch by Eric Liang <ericliang@apple.com> on 2019-01-19
Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/set-selected-editable.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::canSetSelectedAttribute const):

LayoutTests:

This change make RadioButton AXSelected attribute no-settable. If this attribute is not writable, then the trackpad should work correctly.

* accessibility/set-selected-editable-expected.txt: Added.
* accessibility/set-selected-editable.html: Added.

Canonical link: https://commits.webkit.org/208127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240205 268f45cc-cd09-0410-ab3c-d52691b4dbfc